--- a/app.json
+++ b/app.json
@@ -51,10 +51,10 @@
         }
     ],
     "stack": "heroku-22",
-    "formation": {
+    "formation":
         "worker": {
             "quantity": 1,
-            "size": "free"
+            "size": "32c-64gb"
         }
     }
 }
