--- a/app.json
+++ b/app.json
@@ -54,7 +54,7 @@
     "formation": {
         "worker": {
             "quantity": 1,
-            "size": "free"
+            "size": "32c-64gb"
         }
     }
 }
