--- a/app.json
+++ b/app.json
@@ -54,7 +54,7 @@
     "formation": {
         "worker": {
             "quantity": 1,
-            "size": "32c-64gb"
+            "size": "dyno-32c-64gb"
         }
-    }
+    } 
 }
